--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/src/styles/style.css">
+    <link rel="stylesheet" href="src/styles/style.css">
 </head>
 <body>
     <header id="topo">
-        <img href="#" src="/src/styles/components/logo.png" alt="Logo LHS Machado" id="logo">
+        <img href="#" src="src/styles/components/logo.png" alt="Logo LHS Machado" id="logo">
         <nav>
             <a href="#apresentacao">Sobre</a>
             <a href="#botoes">Contatos</a>
@@ -16,7 +16,7 @@
     </header>
     <main>
         <section id="apresentacao">
-            <img id="imagem" src="/src/styles/components/foto.png" alt="Ronaldinho">
+            <img id="imagem" src="src/styles/components/foto.png" alt="Ronaldinho">
             <div id="texto">
                 <h2 id="destaque_texto">
                     Eleve o nível do seu negócio digital a outro nível
